# cloud_storage

./: .gitignore  Cargo.toml  LICENSE  README.md
brain/: Cargo.toml
brain/src/: lib.rs  main.rs
brain/src/managers/: storage_manager.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: communication.proto
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: cli.rs  error.rs  lib.rs  main.rs  storageManager.rs
src/chunk/: mod.rs
src/crypto/: encryption.rs
src/storage/: cache.rs  compression.rs  disk.rs  mod.rs  progress.rs  retry.rs  validation.rs
src/types/: chunk.rs  file.rs  metadata.rs  mod.rs
storage_engine/: Cargo.toml
storage_engine/src/: error.rs  lib.rs
storage_engine/src/crypto/: encryption.rs
storage_engine/src/storage/: compression.rs  disk.rs  mod.rs  validation.rs
tests/: commands.rs  retry.rs
