[package]
name = "cloud_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.83"
blake3 = "1.5.4"
chrono = {version = "0.4.38", features = ["serde"] }
clap = {version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
infer = "0.16.0"
lru = "0.12.5"
ring = "0.17.8"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
thiserror = "2.0.2"
tokio = {version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
uuid = {version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
proptest = "1.5.0"
tempfile = "3.14.0"
