[workspace]
resolver = "2"
members = [
    "storage_engine",
    "cli",
    "server",
    "common", "brain",
]

[workspace.dependencies]
# Shared dependencies across microservices
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"




