[package]
name = "storage_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
chrono = {version = "0.4.38", features = ["serde"] }
tokio = {version = "1.41.1", features = ["full"] }
uuid = {version = "1.11.0", features = ["v4", "serde"] }
infer = "0.16.0"
thiserror = "2.0.2"
lru = "0.12.5"
flate2 = "1.0.35"
async-trait = "0.1.83"
sha2 = "0.10.8"
serde_json = "1.0.132"
aes-gcm = "0.10.3"